--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "Fantasia",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@prettier/plugin-ruby": "^1.6.1"
+  }
 }
